# objectscript

./: .gitignore  CMakeLists.txt  FindMySQL.cmake  FindODBC.cmake  FindSoci.cmake  Makefile  README.md  os-fcgi.cpp  os.config.h.in  os.cpp
OS/examples/: .gitignore  core.os  core.osc  core.osd  core.txt  test3.cmd  test3.os  test3.osc  test3.osd  test3.txt
OS/marmalade-modules/: objectscript.mkf
OS/proj.win32/: .gitignore  OS.cpp  OS.sdf  OS.sln  OS.vcxproj  ReadMe.txt  eval-1.txt  eval-2.txt  stdafx.cpp  test.os
OS/source/: objectscript.cpp  objectscript.h
doc-os/: string_double_quoted.os  string_raw_heredoc.os  string_single_quoted.os
examples-os/: .gitignore  add_user_module.os  add_user_module.txt  bind.os  bind.txt  core.os  core.txt  md2html.os  run_os_prog.os  run_os_prog.txt  std.os  test-new.os  test-new.txt  test-sqlite.db  test.cmd  test.db  test.os  test.txt
examples-os/curl/: test_callbacks.os  test_callbacks.txt  test_clone.os  test_clone.txt  test_getinfo.os  test_getinfo.txt  test_setopt.os  test_setopt.txt  test_version.os  test_version.txt
examples-os/libnoise/: example-01.os  example-02.os  example-complexplanet.os  example-sky.os  example-slime.os  example-wood.os  lib.os
examples-os/opengl/: example-01.os  example-02.os  example-03.os  example-04.os  example-05.os  example-06.os
examples-os/perlin-texture/: example-01.os  example-granite.os  example-jade.os  lib.os
proj.win32/: .gitignore  CMakeLists.txt  examples.sln
proj.win32/add_user_module/: ReadMe.txt  add_user_module.cpp  add_user_module.vcxproj  stdafx.cpp
proj.win32/os/: .gitignore  CMakeLists.txt  ReadMe.txt  copydll.cmd  os.cpp  os.vcxproj  stdafx.cpp  test_fannkuch.lua  test_fannkuch.os  test_fannkuch.osc  test_fannkuch.osd  test_fannkuch.txt
proj.win32/os-fcgi/: CMakeLists.txt  ReadMe.txt  makefile  os-fcgi.cpp  os-fcgi.vcxproj
proj.win32/os-fcgi/MPFDParser-1.0/: CMakeLists.txt  Field.h  Parser.cpp
proj.win32/os-fcgi/fcgi-2.4.1/Win32/: FastCGI.sln  authorizer.vcxproj  config_h.dsp  config_h.vcxproj  echo-cpp.vcxproj  libfcgi.dsp  libfcgi.vcxproj
proj.win32/os-fcgi/fcgi-2.4.1/Win32/Debug/: config_h.lastbuildstate  config_h_manifest.rc  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
proj.win32/os-fcgi/fcgi-2.4.1/doc/fastcgi-prog-guide/: ch2c.htm
proj.win32/os-fcgi/fcgi-2.4.1/examples/: echo-cpp.mak
proj.win32/os-fcgi/fcgi-2.4.1/libfcgi/Debug/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  libfcgi.bsc  libfcgi.lib  vc100.idb
proj.win32/os/soci/lib/Release/: libsoci_mysql_3_2.lib
proj.win32/osbind/: osbind.cpp  osbind.vcxproj  stdafx.cpp
proj.win32/profile_benchmark/: profile-2012-10-01-#2.txt  profile-2012-10-01-#3.txt  profile-2012-10-01-#4.txt  profile-2012-10-01.txt  profile-2012-10-03-#2.txt  profile-2012-10-03-#3.txt  profile-2012-10-03-#4.txt  profile-2012-10-03-#5.txt  profile-2012-10-03.txt  profile-2012-10-31.txt  profile-2012-11-02.txt  profile-2013-03-05.txt  profile-2013-04-05.txt  profile-3.txt  profile-4.txt  profile-spectral-norm.txt  profile.txt  profile_benchmark.cpp  profile_benchmark.vcxproj  profile_os.h  run-spectral-norm.cmd  run.cmd  stdafx.cpp
proj.win32/run_os_prog/: ReadMe.txt  run_os_prog.cpp  run_os_prog.vcxproj  stdafx.cpp
proj.win32/stack_usage/: .gitignore  ReadMe.txt  stack_usage.cpp  stack_usage.vcxproj  stdafx.cpp
source/: .gitignore  CMakeLists.txt  FindLibedit.cmake  date.php  main.cpp  objectscript.cpp  objectscript.h  os-api-helper.h  os-binder-FunctionClassImp.tpl  os-binder-FunctionImp.tpl  os-binder-FunctionImpVoid.tpl  os-binder-arg-cc-functions.h  os-binder-cc-functions.h  os-binder-function.h  os-binder-generator.os  os-binder.cpp  os-binder.h  os-heap-old.h  os-heap.cpp  os-heap.h
source/ext-base64/: cdecode.cpp  os-base64.cpp  os-base64.h
source/ext-curl/: os-curl.cpp  os-curl.h  oscurl.cpp  oscurl.h
source/ext-datetime/: os-datetime.cpp
source/ext-dbal/: os-dbal.cpp  os-dbal.h
source/ext-hashlib/: os-hashlib.cpp
source/ext-iconv/: os-iconv.h
source/ext-libnoise/: os-libnoise.cpp  os-libnoise.h
source/ext-odbo/: os-odbo.cpp  os-odbo.h
source/ext-opengl/: os-opengl.cpp  os-opengl.h  parse-gl.os
source/ext-regexp/: os-regexp.cpp  os-regexp.h
src/: objectscript.cpp  objectscript.h  os-binder-arg-cc-functions.h  os-binder-cc-functions.h  os-binder-function.h  os-binder-generator.os  os-binder.h  os-heap-old.h  os-heap.cpp  os-heap.h
syntax-highlighting/: objectscript.vim
win/: os-projects.sln
win/os/: os.vcxproj  (+1 more)
(+63 files in other folders)
